fixed the color of the arrow in dark mode of localeSwitcher

--- a/src/components/localeSwitcher/localeSwitcher.module.css
+++ b/src/components/localeSwitcher/localeSwitcher.module.css
@@ -6,8 +6,12 @@
   border-color: var(--gray-dark);
 }
 
-.main button:after {
+[data-theme="dark"] .main button:after {
   border-top: 5px solid var(--gray-dark);
+}
+[data-theme="dark"] .main button[aria-expanded="true"]:after {
+  border-top: 0;
+  border-bottom: 5px solid var(--gray-dark);
 }
 
 .main button:after aria-expanded {
